springmvc 上下文监听器ServletContextListener使用容器初始化参数

--- a/city-brain-springmvc/src/main/webapp/WEB-INF/web.xml
+++ b/city-brain-springmvc/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,9 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
+    <!-- 自定义容器初始化监听器 -->
+    <listener>
+        <listener-class>com.city.listener.MyDataContextListener</listener-class>
+    </listener>
+
 </web-app>
