--- a/city-brain-elasticsearch/src/main/resources/application.properties
+++ b/city-brain-elasticsearch/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lock
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
 
+server.port=8080
+server.session.timeout=10
+
+server.tomcat.uri-encoding=UTF-8
+
+mybatis.type-aliases-package=com.city.document
+mybatis.mapperLocations=classpath:mybatis/*.xml
+
+spring.data.elasticsearch.cluster-nodes=127.0.0.1:9300
+spring.data.elasticsearch.cluster-name=elasticsearch
+spring.data.elasticsearch.repositories.enabled=true
