dubbo 三层架构调用服务 不使用注册中心N/A

--- a/city-brain-springboot/pom.xml
+++ b/city-brain-springboot/pom.xml
@@ -39,6 +39,13 @@
         </dependency>
 
         <dependency>
+            <groupId>com.city.common</groupId>
+            <artifactId>city-brain-interface</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
