--- a/dubbo-master/dubbo-family/dubbo-family-xml/dubbo-family-xml-provider/pom.xml
+++ b/dubbo-master/dubbo-family/dubbo-family-xml/dubbo-family-xml-provider/pom.xml
@@ -1,16 +1,24 @@
+<?xml version="1.0" encoding="UTF-8"?>
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>org.apache.dubbo</groupId>
-    <artifactId>dubbo-demo-xml</artifactId>
+    <artifactId>dubbo-family-xml</artifactId>
     <version>${revision}</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
-  <artifactId>dubbo-family-provider</artifactId>
-  <packaging>jar</packaging>
-  <name>${project.artifactId}</name>
-  <description>The demo provider module of dubbo project</description>
+
+  <groupId>org.apache.dubbo</groupId>
+  <artifactId>dubbo-family-xml-provider</artifactId>
+  <version>2.7.8-SNAPSHOT</version>
+
+  <name>dubbo-family-xml-provider</name>
+  <!-- FIXME change it to the project's website -->
+  <url>http://www.example.com</url>
+
   <properties>
     <skip_maven_deploy>true</skip_maven_deploy>
     <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
@@ -19,16 +27,21 @@
   <dependencies>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-family-interface</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-registry-multicast</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-registry-nacos</artifactId>
     </dependency>
-    <!--<dependency>
+    <dependency>
       <groupId>com.alibaba.nacos</groupId>
       <artifactId>nacos-client</artifactId>
-    </dependency>-->
+    </dependency>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-registry-zookeeper</artifactId>
