--- a/city-brain-springboot/src/main/resources/application.properties
+++ b/city-brain-springboot/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/lock
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/product
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -10,7 +10,7 @@ spring.datasource.initial-size=5
 server.port=8081
 server.tomcat.uri-encoding=UTF-8
 
-mybatis.type-aliases-package=com.city.document
+mybatis.type-aliases-package=com.city.elasticsearch.document
 mybatis.mapperLocations=classpath:mybatis/*.xml
 
 # ES
