--- a/city-brain-springmvc/pom.xml
+++ b/city-brain-springmvc/pom.xml
@@ -53,7 +53,7 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>dubbo</artifactId>
-      <version>2.6.8</version>
+      <version>2.5.9</version>
     </dependency>
 
     <dependency>
@@ -62,10 +62,29 @@
       <version>4.1.32.Final</version>
     </dependency>
 
+    <!-- ZooKeeper client -->
+    <dependency>
+      <groupId>com.github.sgroschupf</groupId>
+      <artifactId>zkclient</artifactId>
+      <version>0.1</version>
+    </dependency>
+
     <dependency>
       <groupId>com.city.common</groupId>
       <artifactId>city-brain-interface</artifactId>
       <version>0.0.1-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.shalousun</groupId>
+      <artifactId>common-util</artifactId>
+      <version>1.9.5</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.1.11</version>
     </dependency>
 
   </dependencies>
