--- a/city-brain-dubbo/pom.xml
+++ b/city-brain-dubbo/pom.xml
@@ -25,6 +25,24 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- zookeeper -->
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-framework</artifactId>
+      <version>2.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.curator</groupId>
+      <artifactId>curator-recipes</artifactId>
+      <version>2.5.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.6.Final</version>
+    </dependency>
+
   </dependencies>
 
   <build>
