--- a/city-brain-zookeeper/pom.xml
+++ b/city-brain-zookeeper/pom.xml
@@ -20,11 +20,10 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
+    <groupId>org.apache.zookeeper</groupId>
+    <artifactId>zookeeper</artifactId>
+    <version>3.6.1</version>
+  </dependency>
   </dependencies>
 
   <build>
