--- a/city-brain-zookeeper/pom.xml
+++ b/city-brain-zookeeper/pom.xml
@@ -20,10 +20,16 @@
 
   <dependencies>
     <dependency>
-    <groupId>org.apache.zookeeper</groupId>
-    <artifactId>zookeeper</artifactId>
-    <version>3.6.1</version>
-  </dependency>
+      <groupId>org.apache.zookeeper</groupId>
+      <artifactId>zookeeper</artifactId>
+      <version>3.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.101tec</groupId>
+      <artifactId>zkclient</artifactId>
+      <version>0.10</version>
+    </dependency>
+
   </dependencies>
 
   <build>
