--- a/city-brain-dubbo/pom.xml
+++ b/city-brain-dubbo/pom.xml
@@ -43,6 +43,12 @@
       <version>4.1.6.Final</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo</artifactId>
+      <version>2.7.6</version>
+    </dependency>
+
   </dependencies>
 
   <build>
