sso 服务端 + 客户端整合

--- a/city-brain-sso/src/main/resources/redis.properties
+++ b/city-brain-sso/src/main/resources/redis.properties
@@ -1,5 +1,6 @@
-redis.node.host=192.168.225.131
+redis.node.host=192.168.56.1
 redis.node.port=6379
+redis.maxTotal=600
 
 REDIS_USER_SESSION_KEY=REDIS_USER_SESSION
 SSO_SESSION_EXPIRE=30
