SSO 客户端接入测试

--- a/city-brain-sso-client/src/main/resources/resource.properties
+++ b/city-brain-sso-client/src/main/resources/resource.properties
@@ -7,5 +7,5 @@ IMAGE_BASE_URL=http://192.168.0.11/images
 
 SSO_BASE_URL=http://127.0.0.1:8888
 SSO_DOMAIN_BASE_USRL=http://sso.itdragon.com
-SSO_USER_TOKEN=/user/token/
-SSO_PAGE_LOGIN=/login
+SSO_USER_TOKEN=/brain-sso/user/token?token=
+SSO_PAGE_LOGIN=/brain-sso/login
